# AI-Runtime-Manager

./: .gitignore  CONTRIBUTING.md  Diagnose.bat  Install.bat  Manage.bat  README.md  Repair.bat  Start.bat  Uninstall.bat  Upgrade.bat  conftest.py  install.ps1  install.sh  manage.sh  pyproject.toml  requirements.txt  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
OpenClawManager/: models.yaml  providers.template.yaml  settings.template.yaml  settings.yaml
core/: auth.py  backup.py  bootstrap.ps1  bootstrap.py  cli.py  config.py  confighistory.py  diagnostics.py  discovery.py  manager.py  migrations.py  process.py  prompt_server.py  repair.py  schemas.py  secretstore.py  service.py  validation.py
core/templates/: dashboard.html
docs/: 1_introduction.md  2_installation.md  3_troubleshooting.md  4_use_cases.md  5_maximizing_value.md  6_api_reference.md  7_roadmap.md
tests/: test_auth.py  test_backup.py  test_config.py  test_confighistory.py  test_diagnostics.py  test_discovery.py  test_integration.py  test_migrations.py  test_process.py  test_prompt_server.py  test_repair.py  test_secretstore.py  test_service.py  test_validation.py
