[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airm"
version = "0.1.0"
description = "OpenClaw Workstation AI Runtime Manager — self-healing daemon manager for LiteLLM and OpenClaw"
requires-python = ">=3.11"
dependencies = [
    "pyyaml==6.0.3",
    "litellm[proxy]==1.90.2",
    "requests==2.34.2",
    "psutil>=5.9.0",
]

[project.scripts]
airm = "core.cli:main"

# ponytail: import package stays `core` (local app, editable-install only);
# rename to `airm` if this ever ships to PyPI.
[tool.setuptools]
packages = ["core"]

[tool.setuptools.package-data]
core = ["templates/*.html"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
